syntax = "proto3";
import "web.proto";
option go_package = "github.com/Tackem-org/Global/pb/remoteweb";
package remoteweb;

service RemoteWeb {
  rpc Page(PageRequest) returns (PageResponse) {}
  rpc AdminPage(PageRequest) returns (PageResponse) {}
  rpc File(FileRequest) returns (FileResponse) {}
  rpc WebSocket(WebSocketRequest) returns (WebSocketResponse) {}
  rpc Tasks(TasksRequest) returns (TasksResponse) {}
}

message PageRequest {
  string path = 1;
  string base_path = 2;
  UserData user = 3;
  string method = 4;
  string query_params_json = 5;
  string post_json = 6;
  string path_params_json = 7;
}

message PageResponse {
  uint32 status_code = 1;
  bool hide_error_from_user = 2;
  string error_message = 3;
  string redirect_url = 4;
  string template_html = 5;
  string page_variables_json = 6;
  string custom_page_name = 7;
  repeated string custom_css = 8;
  repeated string custom_js = 9;
}

message FileRequest {
  string path = 1;
}

message FileResponse {
  uint32 status_code = 1;
  string error_message = 2;
  bytes file = 3;
}

message WebSocketRequest {
  string command = 1;
  UserData user = 2;
  string data_json = 3;
}

message WebSocketResponse {
  uint32 status_code = 1;
  bool hide_error_from_user = 2;
  string error_message = 3;
  bool tell_all = 4;
  string data_json = 5;
}

message UserData {
  uint64 user_id = 1;
	string Name = 2;
	string Icon = 3;
	bool IsAdmin = 4;
  repeated string permissions = 5;
}

message TasksRequest {

}

message TasksResponse {
  bool success = 1;
  string error_message = 2;
  repeated web.TaskMessage tasks = 3;
}
